crates/fe/tests/fixtures/cli_output/ingots/unclosed_string/unclosed_string.snap
---
source: crates/fe/tests/cli_output.rs
expression: output
---
=== STDERR ===
Error: Invalid fe.toml in ingot file://<project>/crates/fe/tests/fixtures/cli_output/ingots/unclosed_string/: Failed to parse file://<project>/crates/fe/tests/fixtures/cli_output/ingots/unclosed_string/fe.toml: TOML parse error at line 2, column 17
  |
2 | name = "unclosed
  |                 ^
invalid basic string


=== EXIT CODE: 1 ===
